Make repo layout better. Added RandomObject as Database object. Random seed also from db

--- a/App/App.csproj
+++ b/App/App.csproj
@@ -15,4 +15,10 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DAL\" />
+    <Folder Include="Model\" />
+    <Folder Include="RandomGenerators\" />
+  </ItemGroup>
+
 </Project>
